@@ -133,6 +133,7 @@ popd
 * Tue Nov 29 2011 Marek Goldmann <mgoldman@redhat.com> - 0.10.0-1
 - Upstream release: 0.10.0
 - [BGBUILD-313] boxgrinder build fails to build ec2 image if ec2-user already exists
+- [BGBUILD-318] Add support for us-west-2 region
 
 * Fri Oct 14 2011 Marc Savy <msavy@redhat.com> - 0.9.8-1
 - Upstream release: 0.9.8
