@@ -1,6 +1,7 @@
 v0.10.0
 
 * [BGBUILD-313] boxgrinder build fails to build ec2 image if ec2-user already exists
+* [BGBUILD-318] Add support for us-west-2 region
 
 v0.9.8
 
